<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PreferenceActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:gravity="center" android:paddingLeft="15dp" android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:text=""
                    />
                <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp" android:layout_marginLeft="-10dp"
                    android:src="@drawable/selector_btn_personal" android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:layout_marginLeft="5dp"
                    android:gravity="center" android:textStyle="bold" android:textSize="18dp"
                    android:text="@string/setting"/>
                <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp" android:layout_gravity="center_vertical" android:layout_marginRight="10dp"
                    android:src="@mipmap/round_exit_to_app_black_48dp"
                    android:onClick="onClickExitSetting"/>
            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="1px" android:background="#3f000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp" android:orientation="vertical" android:gravity="center_vertical" android:layout_marginLeft="20dp">
                    <TextView android:id="@+id/tvNick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NickName" android:textSize="20dp" android:textStyle="bold" android:textColor="#ff000000"
                        android:onClick="onClickChangeName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="false"
                        android:linksClickable="false"
                        android:autoLink="all"
                        android:text="@string/changename" android:textSize="14dp"  android:textColor="#ffff0000"
                        android:onClick="onClickChangeName"/>
                </LinearLayout>
                <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp" android:layout_gravity="center_vertical" android:layout_marginRight="10dp"
                    android:src="@mipmap/round_chevron_right_black_48dp" android:alpha="0.4"
                    android:onClick="onClickChangeName"/>
            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="1px" android:background="#3f000000"/>
            <View android:layout_width="match_parent" android:layout_height="5dp" android:background="#7fcccccc"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp" android:orientation="vertical" android:gravity="center_vertical" android:layout_marginLeft="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viewtype" android:textSize="18dp"  android:textColor="#ff000000"/>
                    <TextView android:id="@+id/tvViewType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="false"
                        android:linksClickable="false"
                        android:autoLink="all"
                        android:text="@string/viewlist" android:textSize="14dp"  android:textColor="#ffff0000" android:alpha="0.7"/>
                </LinearLayout>
                <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <ImageView android:id="@+id/ivListType"
                    android:layout_width="35dp"
                    android:layout_height="35dp" android:layout_marginLeft="2dp"
                    android:background="@drawable/selector_btn_listtype" android:src="@drawable/image_border" android:alpha="0.7"
                    android:onClick="onClickListType"/>
                <ImageView android:id="@+id/ivCardType"
                    android:layout_width="35dp"
                    android:layout_height="35dp" android:layout_marginRight="20dp"
                    android:background="@drawable/selector_btn_cardtype" android:src="@drawable/image_border" android:alpha="0.7"
                    android:onClick="onClickCardType"/>
            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="1px" android:background="#3f000000"/>
            <View android:layout_width="match_parent" android:layout_height="5dp" android:background="#7fcccccc"/>
        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>